--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,27 @@
     "intervention/image": "dev-master",
     "symfony/console": "^2.8"
   },
+  "require-dev": {
+    "phpunit/phpunit" : "4.*",
+    "scrutinizer/ocular": "~1.1",
+    "squizlabs/php_codesniffer": "~2.3"
+  },
   "autoload": {
     "psr-4": {
       "MtGTutor\\Console\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "MtGTutor\\Console\\Test\\": "tests"
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
     }
   }
 }
